@@ -2,11 +2,12 @@
 
 This piece of software is a small library aimed to automate the [Selenium Webdriver] binaries management within a Java project in runtime.
 
-If you have ever used [Selenium Webdriver], you probably know that in order to use some browsers (for example Chrome, Internet Explorer, or Opera) you need to download a binary which allows WebDriver to handle the browser. In addition, the absolute path to this binary must be set as Java variables, as follows:
+If you have ever used [Selenium Webdriver], you probably know that in order to use some browsers (for example **Chrome**, **Internet Explorer**, **Opera**, or **Microsoft Edge**) you need to download a binary which allows WebDriver to handle the browser. In addition, the absolute path to this binary must be set as Java variables, as follows:
 
 	System.setProperty("webdriver.chrome.driver", "/absolute/path/to/binary/chromedriver");
 	System.setProperty("webdriver.opera.driver", "/absolute/path/to/binary/operadriver");
 	System.setProperty("webdriver.ie.driver", "C:/absolute/path/to/binary/IEDriverServer.exe");
+	System.setProperty("webdriver.edge.driver", "C:/absolute/path/to/binary/MicrosoftWebDriver.exe");
 
 This is quite annoying since it forces you to link directly this binary in your source code. In addition, you have to check manually when new versions of the binaries are released. This library comes to the rescue, performing in an automated way all this dirty job for you.
 
@@ -19,7 +20,7 @@ In order to use WebDriverManager in a Maven project, first add the following dep
 	<dependency>
 		<groupId>io.github.bonigarcia</groupId>
 		<artifactId>webdrivermanager</artifactId>
-		<version>1.2.4</version>
+		<version>1.3.0</version>
 	</dependency>
 
 Then you can let WebDriverManager to do manage WebDriver binaries for your application/test. Take a look to this JUnit example which uses Chrome with Selenium WebDriver:
@@ -40,7 +41,9 @@ Then you can let WebDriverManager to do manage WebDriver binaries for your appli
 
 		@After
 		public void teardown() {
-			driver.quit();
+			if (driver != null) {
+				driver.quit();
+			}
 		}
 
 		@Test
@@ -56,11 +59,12 @@ Notice that simple adding ``ChromeDriverManager.getInstance().setup();`` WebDriv
 2. It downloads the binary WebDriver if it is not present in your system
 3. It exports the required Java variable by Selenium WebDriver
 
-So far, WebDriverManager supports **Chrome**, **Opera**, and **Internet Explorer**, as follows:
+So far, WebDriverManager supports **Chrome**, **Opera**, **Internet Explorer**, and **Microsoft Edge** as follows:
 
 	ChromeDriverManager.getInstance().setup();
 	InternetExplorerDriverManager.getInstance().setup();
 	OperaDriverManager.getInstance().setup();
+	EdgeDriverManager.getInstance().setup();
 
 ## Advanced
 
@@ -68,6 +72,7 @@ Configuration parameters for WebDriverManager are set in the ``application.prope
 
 	wdm.targetPath=~/.m2/repository/webdriver
 	wdm.override=false
+	wdm.timeout=30
 
 	wdm.chromeDriverUrl=http://chromedriver.storage.googleapis.com/
 	wdm.chromeDriverExport=webdriver.chrome.driver
@@ -81,7 +86,11 @@ Configuration parameters for WebDriverManager are set in the ``application.prope
 	wdm.internetExplorerExport=webdriver.ie.driver
 	wdm.internetExplorerVersion=LATEST
 
-The variable ``wdm.targetPath`` is the default folder in which WebDriver binaries are going to be stored. Notice that by default the path of the Maven local repository is used. The URLs to check the latest version of Chrome, Opera, and Internet Explorer are set using the variables ``wdm.chromeDriverUrl``, ``wdm.operaDriverExport``, and ``wdm.operaDriverUrl``. 
+	wdm.edgeDriverUrl=https://www.microsoft.com/en-us/download/details.aspx?id=48212
+	wdm.edgeExport=webdriver.edge.driver
+	wdm.edgeVersion=LATEST
+
+The variable ``wdm.targetPath`` is the default folder in which WebDriver binaries are going to be stored. Notice that by default the path of the Maven local repository is used. The URLs to check the latest version of Chrome, Opera, and Internet Explorer are set using the variables ``wdm.chromeDriverUrl``, ``wdm.operaDriverExport``, ``wdm.operaDriverUrl``, and ``wdm.edgeDriverUrl``. 
 
 This properties can be overwritten with Java system properties. For example:
 
@@ -91,7 +100,7 @@ This properties can be overwritten with Java system properties. For example:
 
 	-Dwdm.override=true
 
-In addition, the usage of a architecture (32 or 64 bits) can be forced. By default, the suitable binary version for your system and architecture is downloaded and used. The architecture can be forced as follows:
+In addition, the usage of a architecture (32 or 64 bits) can be forced (except for Edge driver). By default, the suitable binary version for your system and architecture is downloaded and used. The architecture can be forced as follows:
 
 	new ChromeDriverManager().setup(Architecture.x32);
 	new ChromeDriverManager().setup(Architecture.x64);
@@ -102,19 +111,25 @@ In addition, the usage of a architecture (32 or 64 bits) can be forced. By defau
 	new OperaDriverManager().setup(Architecture.x32);
 	new OperaDriverManager().setup(Architecture.x64);
 
-By default, WebDriverManager downloads the latest version of the WebDriver binary. A concrete version of the WebDriver binary can be forced. For example, in order to use the version ``2.17`` of ``chromedriver``, the version ``2.46`` of ``IEDriverServer``, and the version ``0.2.0`` of ``operadriver`` respectively, you need to use WebDriverManager as follows: 
+By default, WebDriverManager downloads the latest version of the WebDriver binary. Concrete versions of WebDriver binaries can be forced, for instance: 
 
-	new ChromeDriverManager().setup("2.17");
+	ChromeDriverManager.getInstance().setup("2.20");
 
-	new InternetExplorerDriverManager().setup("2.46");
+	InternetExplorerDriverManager.getInstance().setup("2.46");
 
-	new OperaDriverManager().setup("0.2.0");
+	OperaDriverManager.getInstance().setup("0.2.0");
+	
+	EdgeDriverManager.getInstance().setup("8D0D08CF-790D-4586-B726-C6469A9ED49C");
 
-This can also be done by changing the value of the variables ``wdm.chromeDriverVersion``, ``wdm.operaDriverVersion``, or ``wdm.internetExplorerVersion``, from its default value (``LATEST``) to a concrete version. For instance:
+This can also be done by changing the value of the variables ``wdm.chromeDriverVersion``, ``wdm.operaDriverVersion``,  ``wdm.internetExplorerVersion``, or  ``wdm.edgeVersion`` from its default value (``LATEST``) to a concrete version. For instance:
 
-	-Dwdm.chromeDriverVersion=2.17
+	-Dwdm.chromeDriverVersion=2.20
+
 	-Dwdm.internetExplorerVersion=2.46
+
 	-Dwdm.operaDriverVersion=0.2.0
+
+	-Dwdm.edgeVersion=8D0D08CF-790D-4586-B726-C6469A9ED49C
 
 ## About
 
