@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.bonigarcia</groupId>
 	<artifactId>webdrivermanager</artifactId>
-	<version>1.2.5-SNAPSHOT</version>
+	<version>1.3.0-SNAPSHOT</version>
 
 	<properties>
 		<slf4j.version>1.7.12</slf4j.version>
@@ -12,7 +13,7 @@
 		<commons-lang3.version>3.4</commons-lang3.version>
 
 		<junit.version>4.12</junit.version>
-		<selenium-java.version>2.47.1</selenium-java.version>
+		<selenium-java.version>2.48.2</selenium-java.version>
 
 		<maven-release-plugin.version>2.5.1</maven-release-plugin.version>
 		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
@@ -103,7 +104,6 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>${selenium-java.version}</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
