@@ -19,6 +19,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
+import java.util.Collection;
 import java.util.Enumeration;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
@@ -26,6 +27,8 @@ import java.util.zip.ZipFile;
 import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import com.google.common.io.Files;
 
 /**
  * Downloader class.
@@ -49,10 +52,16 @@ public class Downloader {
 			log.debug("Downloading {} to {}", url, targetFile);
 			FileUtils.copyURLToFile(url, targetFile);
 
-			binary = unZip(targetFile);
+			if (export.contains("edge")) {
+				binary = extractMsi(targetFile);
+			} else {
+				binary = unZip(targetFile);
+			}
 			targetFile.delete();
 		} else {
-			binary = targetFile.getParentFile().listFiles()[0];
+			binary = FileUtils
+					.listFiles(targetFile.getParentFile(), null, true)
+					.iterator().next();
 			log.debug("Using binary driver previously downloaded {}", binary);
 		}
 
@@ -62,9 +71,28 @@ public class Downloader {
 
 	}
 
-	public static final File unZip(String fileInput, String outputFolder)
-			throws IOException {
-		return null;
+	public static final File extractMsi(File msi) throws IOException {
+		File tmpMsi = new File(Files.createTempDir().getAbsoluteFile()
+				+ File.separator + msi.getName());
+		Files.move(msi, tmpMsi);
+		log.trace("Temporal msi file: {}", tmpMsi);
+
+		Process process = Runtime.getRuntime().exec(
+				new String[] { "msiexec", "/a", tmpMsi.toString(), "/qb",
+						"TARGETDIR=" + msi.getParent() });
+		try {
+			process.waitFor();
+		} catch (InterruptedException e) {
+			log.error("Exception waiting to msiexec to be finished", e);
+		} finally {
+			process.destroy();
+		}
+
+		tmpMsi.delete();
+
+		Collection<File> listFiles = FileUtils.listFiles(
+				new File(msi.getParent()), new String[] { "exe" }, true);
+		return listFiles.iterator().next();
 	}
 
 	public static final File unZip(File folder) throws IOException {
@@ -118,10 +146,10 @@ public class Downloader {
 		String zip = url.getFile().substring(url.getFile().lastIndexOf("/"));
 
 		int iFirst = zip.indexOf("_");
-		int iLast = iFirst != zip.lastIndexOf("_") ? zip.lastIndexOf("_")
-				: zip.length();
-		String folder = zip.substring(0, iLast).replace(".zip", "").replace("_",
-				File.separator);
+		int iLast = iFirst != zip.lastIndexOf("_") ? zip.lastIndexOf("_") : zip
+				.length();
+		String folder = zip.substring(0, iLast).replace(".zip", "")
+				.replace(".msi", "").replace("_", File.separator);
 
 		return getTargetPath() + folder + File.separator + version
 				+ File.separator + zip;
