@@ -1,5 +1,6 @@
 wdm.targetPath=~/.m2/repository/webdriver
 wdm.override=false
+wdm.timeout=30
 
 wdm.chromeDriverUrl=http://chromedriver.storage.googleapis.com/
 wdm.chromeDriverExport=webdriver.chrome.driver
@@ -12,3 +13,7 @@ wdm.operaDriverVersion=LATEST
 wdm.internetExplorerDriverUrl=http://selenium-release.storage.googleapis.com/
 wdm.internetExplorerExport=webdriver.ie.driver
 wdm.internetExplorerVersion=LATEST
+
+wdm.edgeDriverUrl=https://www.microsoft.com/en-us/download/details.aspx?id=48212
+wdm.edgeExport=webdriver.edge.driver
+wdm.edgeVersion=LATEST
