@@ -1,3 +1,10 @@
+webdrivermanager (1.3.0)
+
+  + Support for Microsoft Edge
+
+ -- Boni Garcia <boni.gg@gmail.com>  Tue, 01 Nov 2015 09:48:00 +0200
+
+
 webdrivermanager (1.2.4)
 
   + Assess that binary exists in cache to avoid seeking remote server
